@@ -1,0 +1,22 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cpuinfo-collection/cpuinfo-collection-20101114.ebuild,v 1.1 2015/08/05 04:37:08 vapier Exp $
+
+EAPI="5"
+
+MY_P=test_proc-${PV:6:2}November${PV:0:4}
+DESCRIPTION="huge collection of /proc/cpuinfo files"
+HOMEPAGE="http://www.deater.net/weave/vmwprod/linux_logo/"
+SRC_URI="http://www.deater.net/weave/vmwprod/linux_logo/${MY_P}.tar.gz"
+
+LICENSE="public-domain"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
+IUSE=""
+
+S=${WORKDIR}/${MY_P}
+
+src_install() {
+	insinto /usr/share/cpuinfo
+	doins -r * || die
+}
