@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/cpuinfo-collection
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cpuinfo-collection/ChangeLog,v 1.6 2012/12/16 22:32:08 ulm Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cpuinfo-collection/ChangeLog,v 1.7 2015/08/05 04:37:08 vapier Exp $
+
+*cpuinfo-collection-20101114 (05 Aug 2015)
+
+  05 Aug 2015; Mike Frysinger <vapier@gentoo.org>
+  +cpuinfo-collection-20101114.ebuild:
+  Version bump.
 
   16 Dec 2012; Ulrich Müller <ulm@gentoo.org>
   cpuinfo-collection-20060720.ebuild, cpuinfo-collection-20070104.ebuild:
